文档编辑中

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,6 +32,8 @@
 </script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css" />
+<link rel="stylesheet" href="/css/github.markdown.css" />
+<link rel="stylesheet" href="/css/tg.markdown.css" />
 <!-- <link
   type="application/atom+xml"
   rel="alternate"
