--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,7 @@
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
   {%- include extensions/google-analytics.html -%}
   {%- endif -%}
+  {%- include extensions/plausible-analytics.html -%}
   {%- include extensions/code-highlight.html -%}
   {%- include custom-head.html -%}
 </head>
