--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,7 @@
   {%- include extensions/google-analytics.html -%}
   {%- endif -%}
   {%- include extensions/plausible-analytics.html -%}
+  {%- include extensions/umami-analytics.html -%}
   {%- include extensions/code-highlight.html -%}
   {%- include custom-head.html -%}
 </head>
