--- a/_includes/extensions/umami-analytics.html
+++ b/_includes/extensions/umami-analytics.html
@@ -1,1 +1,2 @@
-<script async defer src="https://analytics.umami.is/script.js" data-website-id="79a81ec1-d9e3-4b2f-9a93-225ddf90ff2e"></script>
+<!-- <script async defer src="https://analytics.umami.is/script.js" data-website-id="79a81ec1-d9e3-4b2f-9a93-225ddf90ff2e"></script> -->
+<script async defer data-website-id="6e777287-6646-4e04-8be3-29ab0f40daea" src="http://localhost:3000/umami.js"></script>
