--- a/_sass/yat/_dark.scss
+++ b/_sass/yat/_dark.scss
@@ -1,5 +1,5 @@
-$dark-background-color: #0f172a  !default;//    #0e0e0e !;
-$dark-text-color: #fff !default;//#bbb !default;
+$dark-background-color:       #0e0e0e !default;
+$dark-text-color: #bbb !default;
 
 html[data-theme="dark"]  {
   &[data-scroll-status='top'] {
