--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -1,4 +1,3 @@
-@use "sass:math";
 /**
  * Animation for transparent header
  */
@@ -108,7 +107,7 @@ html {
 
     .site-favicon {
       display: inline-block;
-      height: $header-height-div15;
+      height: $header-height / 1.5;
       margin-right: 5px;
     }
   }
@@ -680,7 +679,7 @@ html {
   }
 
   @include media-query($on-palm) {
-    height: $header-height-div15;
+    height: $banner-height / 1.5;
   }
 }
 
